build: add deps

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "repository": "https://github.com/robertokbr/gama-lab-ex.git",
-  "author": "robkbr <roberto.junior@nickelpay.com.br>",
+  "author": "robertokbr <robertojuniordev@gmail.com>",
   "license": "MIT",
   "dependencies": {
     "jest": "^28.1.3"
